--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 .img-fondo{
-    background-image: url(imagen-pared1.jpg);
+    background-image: url(./imagenes/imagen-pared1.jpg);
 
 }
 
