--- a/style.css
+++ b/style.css
@@ -23,3 +23,18 @@ body{
     width: 20px;
     height: 20px;
 }
+
+.carritoicono{
+    width: 35px;
+}
+
+
+.carritobtn:hover{
+    background-color: rgb(100, 100, 99);
+
+    border-radius: 7px;
+}
+
+#btncarrito{
+    border:none;
+}
