--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body{
 
 }
 
+h1{
+    border-radius:5px; margin-left: 565px; margin-right: 565px;
+}
+
 .numericUpDown{
     background-color: rgb(211, 208, 208) !important;
 }
